# Chat

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  config.txt
client/source/: App.cpp  App.h  Bubble.cpp  Bubble.h  Button.cpp  Button.h  Chat.cpp  Chat.h  ChatLabel.cpp  ChatLabel.h  Login.cpp  Login.h  Reader.cpp  Reader.h  RoundedRect.cpp  RoundedRect.h  Server.cpp  Server.h  Textbox.cpp  Textbox.h  main.cpp
server/: CMakeLists.txt  Chat.cpp  Chat.h  Server.cpp  Server.h  User.cpp  User.h  defines.h  main.cpp
server/users/: 0.txt  1.txt  2.txt  3.txt
source/client/: CMakeLists.txt  main.cpp
source/server/: CMakeLists.txt  main.cpp
